Updating dependencies due to less files not being compiled properly